<resources>
    <string name="app_name">CoronaStat</string>
    <string name="Infections">INFECTIONS</string>
    <string name="Deaths">DEATHS</string>
    <string name="Deaths_pm">DEATHS(pm)</string>
    <string name="Infection_pm">INFECTIONS(pm)</string>
    <string name="World_Update">World Update</string>
    <string name="Recoveries">RECOVERIES</string>
    <string name="Critical">CRITICAL</string>
    <string name="Most_Infected">Most Infected</string>
    <string name="All_Countries">ALL COUNTRIES</string>
    <string name="menu_world">WORLD</string>
    <string name="menu_countries">COUNTRIES</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="per_million">PER MILLION</string>
    <string name="fatality_rate">Fatality Rate</string>
    <string name="recovery_rate">Recovery Rate</string>
</resources>