<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="statVM"
            type="com.ritvik.coronovirusstat.skeleton.StatViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
       >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14999998">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/newcases_textview"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="17dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/heebo_medium"
                    android:textAlignment="center"
                    android:textColor="#6f758e"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/totalcases_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/heebo_medium"
                    android:textColor="#8b5bf3"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/infection_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/Infections"
                    android:textColor="#6f758e"
                    android:textSize="13sp">

                </TextView>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14999998">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/deaths_rectangle_3"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="333dp">

                <TextView
                    android:id="@+id/newdeaths_textview"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/heebo_medium"
                    android:textColor="#6f758e"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/totaldeaths_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_medium"

                    android:textColor="#e74782"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/deaths_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/Deaths"
                    android:textColor="#6f758e"
                    android:textSize="13sp">

                </TextView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/card1"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cases_rectangle_1"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="333dp">

                <TextView
                    android:id="@+id/newrecoveries_textview"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/heebo_medium"

                    android:textColor="#6f758e"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/totalRecoveries_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_medium"

                    android:textColor="#83c287"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/Cases_pm_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/Recoveries"
                    android:textColor="#6f758e"
                    android:textSize="13sp">

                </TextView>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card3"
            app:layout_constraintTop_toBottomOf="@+id/card2"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_5"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="333dp">

                <TextView
                    android:id="@+id/newcritical_textview"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/heebo_medium"

                    android:textColor="#6f758e"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/totalcritical_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_medium"

                    android:textColor="#ffce5c"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/deaths_pm_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/Critical"
                    android:textColor="#6f758e"
                    android:textSize="13sp">

                </TextView>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="45dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="45dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heebo_bold"
            android:text="@string/World_Update"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/card1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="54dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heebo_bold"
            android:text="@string/Most_Infected"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card3"
            app:layout_constraintVertical_bias="0.060000002" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/country_rc"
            android:layout_width="wrap_content"
            android:layout_height="235dp"
            android:clipToPadding="false"
            app:countryListData="@{statVM.countryData}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:listitem="@layout/list_view_item" />



<!--        <ImageView-->
<!--            android:id="@+id/status_image"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:ApiStatus="@{statVM.status}" />-->

<!--        <SearchView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="45dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/country_rc"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/card4"-->
<!--            app:layout_constraintVertical_bias="1.0" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>